# amphibious_choreonoid

./: .clang-format  .gitignore  .rosinstall  CMakeLists.txt  README.md
amphibious_choreonoid/: CMakeLists.txt  package.xml
amphibious_choreonoid/config/: amphibious_tank_params.yaml  field.yaml
amphibious_choreonoid/launch/: tank_sim.launch
amphibious_choreonoid/models/: AmphibiousTank.body  amphibious_tank.body  box.body  goal.body  shore.body
amphibious_choreonoid/msg/: simple_joint_command.msg
amphibious_choreonoid/projects/: tank_sim.cnoid  tank_sim.cnoid.in
amphibious_choreonoid/src/: ArmController.cpp  CMakeLists.txt  CameraController.cpp  JointController.cpp  RobotStateController.cpp  ThrusterController.cpp  TrackController.cpp  TurretController.cpp
amphibious_choreonoid_motions/: CMakeLists.txt  package.xml
amphibious_choreonoid_motions/config/: amphibious_tank.yaml  params.yaml
amphibious_choreonoid_motions/include/: calc_motions.hpp
amphibious_choreonoid_motions/include/amphibious_choreonoid_motions/: machine_state.hpp
amphibious_choreonoid_motions/src/: calc_motions.cpp  calc_motions_node.cpp
amphibious_choreonoid_motions/src/amphibious_choreonoid_motions/: machine_state.cpp
launch/: tank_sim.launch
models/: AmphibiousTank.body  box.body  shore.body
projects/: tank_sim.cnoid
src/: CMakeLists.txt  CameraController.cpp  TurretController.cpp
