choreonoid_add_simple_controller(CameraController CameraController.cpp)
target_link_libraries(CameraController ${roscpp_LIBRARIES} ${image_transport_LIBRARIES})

choreonoid_add_simple_controller(TrackController TrackController.cpp)
target_link_libraries(TrackController ${roscpp_LIBRARIES})

choreonoid_add_simple_controller(ThrusterController ThrusterController.cpp)
target_link_libraries(ThrusterController ${roscpp_LIBRARIES} CnoidFluidDynamicsPlugin)

choreonoid_add_simple_controller(TurretController TurretController.cpp)
